Refactor view-model in product/category domain

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/socialite": "^5.5",
         "laravel/telescope": "^4.9",
         "laravel/tinker": "^2.7",
-        "sentry/sentry-laravel": "^2.14"
+        "sentry/sentry-laravel": "^2.14",
+        "spatie/laravel-view-models": "^1.5"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
